--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "^7.1.6",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
+    "assert": "^1.4.1",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -17,6 +18,7 @@
     "jest": "^23.6.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "mongodb": "^3.1.10",
     "passport": "^0.4.0",
     "path": "^0.12.7",
     "react": "^16.5.2",
