--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "path": "^0.12.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-feather": "^1.1.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
