--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "forever": "^0.15.3",
     "fs": "0.0.1-security",
     "jest": "^23.6.0",
     "lodash": "^4.17.11",
