--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.10",
     "nodemon": "^1.18.10",
+    "normalize.css": "^8.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
