--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "nodemon --exec babel-node server.js",
+    "all": "nodemon --exec babel-node server.js | react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
