--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "scripts": {
     "start": "react-scripts start",
     "server": "nodemon --exec babel-node server.js",
-    "all": "nodemon --exec babel-node server.js | react-scripts start",
+    "all": "nodemon --exec babel-node server.js | react-scripts start & wait",
+    "win-all": "start nodemon --exec babel-node server.js && start react-scripts start & wait",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
