--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "assert": "^1.4.1",
     "auth": "0.0.9",
     "bcrypt": "^3.0.5",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -14,7 +15,7 @@
     "express-session": "^1.15.6",
     "forever": "^0.15.3",
     "fs": "0.0.1-security",
-    "jest": "^23.6.0",
+    "jest": "^24.9.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongodb": "^3.1.10",
