--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
+    "react-select": "^3.0.8",
     "react-test-renderer": "^16.11.0",
     "twilio": "^3.36.0"
   },
